# Math589B_Spring26_Assignment1

./: LICENSE  README.md  pyproject.toml
csrc/: rod_energy.cpp
docs/: background.tex
scripts/: run_opt.py
src/elastic_rod/: __init__.py  autograde_api.py  bfgs.py  ctypes_interface.py  model.py  utils.py
tests/: conftest.py  test_grad_check.py
