[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "elastic_rod"
version = "0.1.0"
description = "Charged elastic rod energy + BFGS assignment starter"
requires-python = ">=3.9"
dependencies = ["numpy"]

[tool.setuptools.packages.find]
where = ["src"]
